--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "dat.gui": "^0.7.9",
+    "enable3d": "^0.25.1",
+    "matter-js": "0.17.1",
+    "phaser": "^3.55.2",
+    "poly-decomp": "^0.3.0",
     "rxjs": "~7.5.0",
     "three": "^0.139.2",
     "tslib": "^2.3.0",
@@ -30,8 +34,10 @@
     "@angular/compiler-cli": "~13.3.0",
     "@types/dat.gui": "^0.7.7",
     "@types/jasmine": "~3.10.0",
+    "@types/matter-js": "0.17.6",
     "@types/node": "^12.11.1",
     "@types/three": "^0.139.0",
+    "@yandeu/events": "0.0.5",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
