--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "dat.gui": "^0.7.9",
+    "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.5",
     "three": "^0.140.2",
     "tslib": "^2.4.0",
