--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@types/jasmine": "~4.0.3",
     "@types/node": "^17.0.35",
     "@types/three": "^0.140.0",
+    "ammojs-typed": "^1.0.6",
     "jasmine-core": "~4.1.1",
     "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.1",
