--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.3.9",
-    "@angular/common": "~13.3.9",
-    "@angular/compiler": "~13.3.9",
-    "@angular/core": "~13.3.9",
-    "@angular/forms": "~13.3.9",
-    "@angular/localize": "~13.3.9",
-    "@angular/platform-browser": "~13.3.9",
-    "@angular/platform-browser-dynamic": "~13.3.9",
-    "@angular/router": "~13.3.9",
+    "@angular/animations": "~13.3.10",
+    "@angular/common": "~13.3.10",
+    "@angular/compiler": "~13.3.10",
+    "@angular/core": "~13.3.10",
+    "@angular/forms": "~13.3.10",
+    "@angular/localize": "~13.3.10",
+    "@angular/platform-browser": "~13.3.10",
+    "@angular/platform-browser-dynamic": "~13.3.10",
+    "@angular/router": "~13.3.10",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
+    "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "dat.gui": "^0.7.9",
     "ngx-socket-io": "^4.2.0",
@@ -30,9 +31,9 @@
     "zone.js": "~0.11.5"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.3.6",
-    "@angular/cli": "~13.3.6",
-    "@angular/compiler-cli": "~13.3.9",
+    "@angular-devkit/build-angular": "~13.3.7",
+    "@angular/cli": "~13.3.7",
+    "@angular/compiler-cli": "~13.3.10",
     "@types/dat.gui": "^0.7.7",
     "@types/jasmine": "~4.0.3",
     "@types/node": "^17.0.35",
@@ -44,6 +45,6 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.0.1",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.6.4"
+    "typescript": "4.4.2"
   }
 }
