--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
     "@angular/platform-browser": "~13.3.10",
     "@angular/platform-browser-dynamic": "~13.3.10",
     "@angular/router": "~13.3.10",
+    "@fortawesome/fontawesome-free": "^6.1.1",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
     "@popperjs/core": "^2.11.5",
     "autoprefixer": "10.4.5",
     "bootstrap": "^5.1.3",
     "dat.gui": "^0.7.9",
+    "load-awesome": "^1.1.0",
+    "ngx-spinner": "^13.1.1",
+    "ngx-toastr": "^14.2.3",
     "ngx-socket-io": "^4.2.0",
     "rxjs": "~7.5.5",
     "three": "^0.140.2",
